--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
         "react/event-loop": "0.3.*"
     },
     "autoload": {
-        "psr-0": { "Clue\\Readline\\React": "src/" }
+        "psr-4": { "Clue\\React\\Readline\\": "src/" }
     }
 }
