--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=5.3",
         "ext-readline": "*",
         "evenement/evenement": "1.*",
         "react/event-loop": "0.3.*"
