--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": ">=5.3",
         "ext-readline": "*",
-        "evenement/evenement": "1.*",
-        "react/event-loop": "0.3.*"
+        "evenement/evenement": "~1.0|~2.0",
+        "react/event-loop": "~0.3.0|~0.4.0"
     },
     "autoload": {
         "psr-4": { "Clue\\React\\Readline\\": "src/" }
